test/stg/error/funName2.stg
f1 = FUN(b -> case b of {
      	       False -> true;
	       List a -> true;
	       True -> false;
	       x -> let {a = THUNK(b);
	       	    	 a = THUNK(b)} in a});
